fix white scrollbar corner in dark mode

--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -166,6 +166,10 @@ body {
 	height: 12px
 }
 
+::-webkit-scrollbar-corner {
+	background-color: transparent;
+}
+
 ::-webkit-scrollbar-track-piece {
 	background-color: transparent;
 }
